2005-11-03  Bruno coudoin  <bruno.coudoin@free.fr>

	reviewed by: <delete if not using a buddy>

	* boards/doubleentry/Makefile.am:
	* boards/geography/Makefile.am:
	* boards/geography/board1_0.xml.in:
	* boards/sounds/fr/geography/europa.ogg: renamed
	* boards/sounds/fr/geography/europe.ogg:
	* boards/sounds/fr/geography/gcompris_geography_fr.assetml.in:
	* boards/sounds/pt/geography/europa.ogg: renamed
	* boards/sounds/pt/geography/europe.ogg:
	* boards/sounds/pt/geography/gcompris_geography_pt.assetml.in:
	* src/gcompris/gameutil.c: (gcompris_find_absolute_filename):
	* src/gcompris/soundutil.c: (thread_play_ogg):

2005-11-01  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixes text of board description being badly wrapped
	  I now use the richtext canvas to display it. We may
	  loose on reliabilty.

	* boards/canal_lock.xml.in:
	* boards/clickgame.xml.in:
	* boards/gnumch-inequality.xml.in:
	* boards/guessnumber.xml.in:
	* boards/redraw_symmetrical.xml.in:
	* boards/traffic.xml.in:
	* boards/watercycle.xml.in:
	* src/boards/menu.c: (menu_start), (menu_end), (item_event),
	(set_content), (create_info_area):
	* src/boards/python/anim.py: fix for import old animation not working
	* src/boards/python/guessnumber.py: Fix for widget that appers over bonus and/or help
	* src/gcompris/gameutil.c: (gcompris_add_xml_to_data):
	* src/gcompris/help.c: (set_content):

2005-10-31  Bruno coudoin  <bruno.coudoin@free.fr>

	Many bugfixes.

	* boards/guessnumber.xml.in: Name of section change to fix the bug of memory disapearing
	* boards/memory.xml.in: -
	* boards/memory_group.xml.in: -
	* boards/memory_tux.xml.in: -
	* boards/mosaic.xml.in: -
	* boards/railroad.xml.in: -
	* boards/submarine/vanne.png: Changed to be easier to catch
	* boards/tuxpaint.xml.in: added translation aware
	* po/POTFILES.in: added tuxpaint
	* src/boards/erase.c: (game_won): added more animals images to give more change they change at each gameplay